# secret_santa_fastapi

./: .env.example  .gitignore  README.md  alembic.ini  main.py  package-lock.json  package.json  pm2-app.config.js  pyproject.toml
alembic/: env.py
alembic/versions/: 10580b41217a_add_email_verifications_table.py  17222039d1b7_add_participants_table.py  be7f75c800cc_add_users_table.py  bff03e1186f7_add fields to users table.py  bff03e1186f7_add_preferences_field.py  f4088f02a49a_add_games_table.py
app/api/: __init__.py
app/api/authorization/: __init__.py  login.py  registration.py
app/api/game/: __init__.py  close_game.py  game_register.py  open_game.py  participants.py
app/api/user/: __init__.py  email_verification.py  gift_recipient.py  user_info.py
app/core/: config.py  db.py  factory.py
app/depends/: db.py  get_settings.py  swagger_support_jwt_authentication.py
app/depends/managers/: game_manager.py  user_manager.py
app/helpers/: constants.py  random_codes_generator.py
app/models/: __init__.py
app/models/bypass_models/: __init__.py  email_verifications.py  games.py  participants.py
app/models/mixins/: __init__.py
app/models/users_models/: users.py
app/schemas/emails_schemas/: email.py  email_verification_code.py
app/schemas/emails_shemas/: __init__.py  email_verification_code.py
app/schemas/games_schemas/: __init__.py  game.py  game_close.py  game_open.py  game_participants_pairs.py  game_playing_users.py  game_register.py  (+1 more)
app/seeding/: generate_admin.py  generate_users.py
app/utils/: __init__.py  sendgrid_post_office.py
(+13 files in other folders)
