[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["Mark <krotovod777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
alembic = "^1.7.7"
uvicorn = "^0.17.6"
fastapi-users = {extras = ["sqlalchemy2"], version = "^9.3.0"}
python-dotenv = "^0.19.2"
aiomysql = "^0.0.22"
databases = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
