[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["Mark <krotovod777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
alembic = "^1.7.7"
uvicorn = "^0.15.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^8.1.2"}
python-dotenv = "^0.19.2"
aiomysql = "^0.0.22"
databases = "^0.5.5"
python-http-client = "^3.3.7"
sendgrid = "^6.9.7"
Faker = "^13.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
